--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
 				value: {
 					SOCKET_URL: isDev()
 						? "ws://localhost:3001/ws"
-						: "https://pb-soundboard-backend.deno.dev/ws",
+						: "wss://pb-soundboard-backend.deno.dev/ws",
 					STATIC_ASSETS_URL: isDev()
 						? "http://localhost:3002"
 						: "https://paulborm.github.io/soundboard",
