--- a/client/index.html
+++ b/client/index.html
@@ -33,6 +33,11 @@
 		</script>
 
 		<style>
+			:root {
+				color-scheme: dark;
+				--gap: 16px;
+			}
+
 			*,
 			*::before,
 			*::after {
@@ -45,14 +50,17 @@
 			}
 
 			body {
+				display: grid;
+				grid-auto-rows: auto;
+				gap: 2rem;
 				margin: 0;
-				padding: 0;
+				padding: var(--gap);
 				background-color: rgb(36, 34, 31);
 			}
 
-			:where(#soundboard) {
-				padding: 1em;
-				touch-action: manipulation;
+			footer {
+				display: flex;
+				flex-direction: row-reverse;
 			}
 
 			sound-board-sounds {
@@ -64,7 +72,7 @@
 					minmax(var(--min-size-sound), 1fr)
 				);
 				grid-auto-rows: auto;
-				gap: 16px;
+				gap: var(--gap);
 			}
 
 			@media screen and (min-width: 768px) {
@@ -81,6 +89,16 @@
 				<!-- ... <sound-board-sound></sound-board-sound> -->
 			</sound-board-sounds>
 		</sound-board>
+
+		<footer>
+			<a
+				href="https://github.com/paulborm/soundboard"
+				target="_blank"
+				rel="noopener noreferrer"
+			>
+				GitHub
+			</a>
+		</footer>
 
 		<template id="sound-board-sound-template">
 			<style>
@@ -101,6 +119,7 @@
 					border-radius: 4px;
 					transition: outline ease-in-out 150ms;
 					overflow: hidden;
+					touch-action: manipulation;
 
 					container-type: inline-size;
 					container-name: sound;
