--- a/client/index.html
+++ b/client/index.html
@@ -227,7 +227,7 @@
 			</style>
 			<figure aria-label="Sound effect">
 				<img src="" alt="" />
-				<button type="button">
+				<button type="button" aria-label="Play">
 					<svg
 						xmlns="http://www.w3.org/2000/svg"
 						fill="none"
